Wrap long titles if there are no spaces. Should wrap correctly already if there are spaces.

--- a/static/css/sass/cdr-ui.scss
+++ b/static/css/sass/cdr-ui.scss
@@ -837,12 +837,14 @@ p.no-search-results {
   .browse-header {
     h2.item-title {
       padding-left: 15px;
+      word-wrap: break-word;
     }
   }
 
   .relateditem {
     p {
       font-size: 16px;
+      word-wrap: break-word;
     }
   }
 
@@ -859,6 +861,7 @@ p.no-search-results {
 
 .item-title {
   font-size: 36px;
+  word-wrap: break-word;
 }
 
 .item-actions {
@@ -1112,6 +1115,7 @@ table.dataTable {
   .collinfo_metadata {
     margin: auto 0;
   }
+
   .item-title {
     margin-bottom: 0;
   }
